# clap-plugins

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  deploy.sh  vcpkg.json
.github/workflows/: build-gui.yml  build-headless.yml  build.yml  codeql-analysis.yml
.github/workflows/properties/: build.properties.json
cmake/toolchains/: wasm-clang-linux.cmake
host/: CMakeLists.txt  application.cc  audio-settings-widget.cc  audio-settings-widget.hh  audio-settings.hh  engine.cc  engine.hh  linux-clap-host.version  main-window.cc  main-window.hh  main.cc  midi-settings-widget.cc  midi-settings.hh  plugin-host.cc  plugin-host.hh  plugin-param.hh  plugin-parameters-widget.hh  plugin-quick-control-widget.cc  plugin-quick-control-widget.hh  plugin-quick-controls-widget.cc  plugin-quick-controls-widget.hh  precompiled-header.hh  settings-widget.hh  settings.hh
jenkins/: build.groovy  linux-plugins.groovy
plugins/: CMakeLists.txt  abstract-gui.hh  audio-buffer.cc  audio-buffer.hh  audio-buffer.hxx  clap-entry.cc  constants.hh  container-of.hh  context.hh  core-plugin.cc  core-plugin.hh  cxx-except-workaround.cc  domain-converter.hh  fixedpoint.hh  gui-proxy.hh  intrusive-list.hh  linux-clap-plugins.version  local-gui-proxy.hh  merge-process-status.cc  merge-process-status.hh  modulation-matrix.hh  module.cc  module.hh  parameter.cc  parameter.hh  parameters.cc  parameters.hh  path-provider.cc  path-provider.hh  plugins.plist.in  remote-gui.cc  remote-gui.hh  sample-delay.cc  sample-delay.hh  smoothed-value.hh  stream-helper.cc  stream-helper.hh  tuning-provider.cc  tuning-provider.hh  tuning-utilities.hh  (+1 more)
plugins/gui/: CMakeLists.txt  abstract-gui-client-factory.cc  abstract-gui-client-factory.hh  abstract-gui-factory.cc  abstract-gui-factory.hh  abstract-gui-listener.cc  abstract-gui-listener.h  abstract-gui-listener.hh  abstract-gui.cc  abstract-gui.hh  application.cc  application.hh  cf-timer.cc  cf-timer.hh  gui-client-factory.cc  gui-client-factory.hh  gui-client-main.cc  gui-client.cc  gui-client.hh  gui-handle.cc  gui-handle.hh  gui-main.cc  gui-proxy.hh  gui.cc  gui.hh  local-gui-client-factory.cc  local-gui-client-factory.hh  local-gui-factory.cc  local-gui-factory.hh  local-gui-proxy.cc  local-gui-proxy.hh  main.cc  native-timer.hh  parameter-proxy.cc  parameter-proxy.hh  plugin-proxy.cc  plugin-proxy.hh  remote-gui-client-factory-proxy.cc  remote-gui-client-factory-proxy.hh  remote-gui-client-factory.cc  (+30 more)
plugins/gui/qml/: CMakeLists.txt
plugins/gui/qml/clap/lib/: ADSR.qml  CMakeLists.txt  DigiOsc.qml  Filter.qml  Knob.qml  qmldir
plugins/gui/qml/clap/skins/: CMakeLists.txt
plugins/gui/qml/clap/skins/char-check/: main.qml
plugins/gui/qml/clap/skins/dc-offset/: main.qml
plugins/gui/qml/clap/skins/gain/: main.qml
plugins/gui/qml/clap/skins/synth/: main.qml
plugins/gui/qml/clap/skins/track-info/: main.qml
plugins/gui/qml/clap/skins/transport-info/: main.qml
plugins/gui/qml/clap/skins/undo-test/: main.qml
plugins/io/: CMakeLists.txt  basic-remote-channel.cc  basic-remote-channel.hh  buffer.hh  messages.hh  posix-remote-channel.cc  posix-remote-channel.hh  remote-channel.hh  win32-remote-channel.cc  win32-remote-channel.hh
plugins/modules/: adsr-module.cc  adsr-module.hh  digi-osc-module.cc  digi-osc-module.hh  dummy-module.hh  module.cc  module.hh  root-module.cc  root-module.hh  svf-module.cc  svf-module.hh  voice-expander-module.cc  voice-expander-module.hh  voice-expender-module.cc  voice-expender-module.hh  voice-module.cc  voice-module.hh
plugins/plugs/adsr/: adsr-plug.cc  adsr-plug.hh
plugins/plugs/char-check/: char-check.cc  char-check.hh
plugins/plugs/dc-offset/: dc-offset.cc  dc-offset.hh
plugins/plugs/dc-offset-with-latency/: dc-offset-with-latency.cc  dc-offset-with-latency.hh
plugins/plugs/gain/: gain.cc  gain.hh
plugins/plugs/gain-metering/: gain-metering.cc  gain-metering.hh
plugins/plugs/latency/: latency.cc  latency.hh
plugins/plugs/location/: location.cc  location.hh
plugins/plugs/mini-curve-display/: mini-curve-display.cc  mini-curve-display.hh
plugins/plugs/offline-latency/: offline-latency.cc  offline-latency.hh
plugins/plugs/pm-osc/: pm-osc.hh
plugins/plugs/project-location/: project-location.cc  project-location.hh
plugins/plugs/realtime-requirement/: realtime-requirement.cc  realtime-requirement.hh
plugins/plugs/scratch-memory/: scratch-memory.cc  scratch-memory.hh
plugins/plugs/svf/: svf-plug.cc  svf-plug.hh
plugins/plugs/synth/: synth.cc  synth.hh
plugins/plugs/track-info/: track-info.cc  track-info.hh
plugins/plugs/transport/: transport-info.cc  transport-info.hh
plugins/plugs/undo-test/: undo-test.cc  undo-test.hh  undo-test.hxx
plugins/tests/: value-type-tests.cc
plugins/value-types/: boolean-value-type.cc  boolean-value-type.hh  decibel-value-type.cc  decibel-value-type.hh  enumerated-value-type.cc  enumerated-value-type.hh  frequency-value-type.cc  frequency-value-type.hh  simple-value-type.cc  simple-value-type.hh  value-type.cc  value-type.hh
scripts/: build-gui.ps1  build-gui.sh  build-headless.sh  build.sh
vcpkg-overlay/triplets/: arm64-osx-clap-host.cmake  arm64-osx-clap-plugins.cmake  arm64-osx-cp.cmake  arm64-osx.cmake  i686-windows-clap-plugins.cmake  x64-linux-cp.cmake  x64-linux.cmake  x64-osx-cp.cmake  x64-osx.cmake  x64-win-cp.cmake  x64-windows.cmake  x86-win-cp.cmake  x86-windows.cmake  x86_64-linux-clap-plugins.cmake  x86_64-linux-cp.cmake
